Added ability to add games and scores

--- a/app/views/fantasy_teams/index.html.haml
+++ b/app/views/fantasy_teams/index.html.haml
@@ -7,9 +7,23 @@
         %thead
           %tr.row
             %th Name
+            %th QB
+            %th RB
+            %th RB
+            %th WR
+            %th WR
+            %th TE
+            %th K
             %th Score
         %tbody
           - @fantasy_teams.each do |fantasy_team|
             %tr.row
               %td= link_to(fantasy_team.name, fantasy_team)
+              %td= fantasy_team.player_name_at_pos("QB")
+              %td= fantasy_team.player_name_at_pos("RB1")
+              %td= fantasy_team.player_name_at_pos("RB2")
+              %td= fantasy_team.player_name_at_pos("WR1")
+              %td= fantasy_team.player_name_at_pos("WR2")
+              %td= fantasy_team.player_name_at_pos("TE")
+              %td= fantasy_team.player_name_at_pos("K")
               %td
