--- a/app/views/fantasy_teams/show.html.haml
+++ b/app/views/fantasy_teams/show.html.haml
@@ -6,10 +6,14 @@
       %table.table
         %thead
           %tr.row
+            %th QB
             %th Name
+            /%th NFL Team
             %th Score
         %tbody
           - @fantasy_team.players.each do |player|
             %tr.row
+              %td= player.position
               %td= link_to(player.name, player)
+              /%td= player.nfl_teams.first.name
               %td
