--- a/app/views/nfl_teams/index.html.haml
+++ b/app/views/nfl_teams/index.html.haml
@@ -7,9 +7,11 @@
         %thead
           %tr.row
             %th Name
+            %th Players
             %th Score
         %tbody
           - @nfl_teams.each do |nfl_team|
             %tr.row
               %td= link_to(nfl_team.name, nfl_team)
+              %td= nfl_team.players.distinct.map{|p| link_to(p.name, p)}.join(", ").html_safe
               %td
