now keeps track of players left and displays them as such and shows scores of the games

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,11 @@
 form.formtastic .stringish input {
     width: 100%;
 }
+
+.team-is-out {
+    color: lightcoral;
+}
+
+.player-is-out {
+    color: lightcoral;
+}
