--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title= title
+    %meta{name: "viewport", content:"width=device-width, initial-scale=1"}
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
@@ -35,7 +36,7 @@
                 %span.caret
               %ul.dropdown-menu{:role => "menu"}
                 %li= link_to "All Players", players_path
-                %li= link_to "Active Players", "#"
+                %li= link_to "Active Players", active_players_path
             %li.dropdown
               %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
                 Games
@@ -60,4 +61,5 @@
       - if flash[:notice]
         .alert.alert-info= flash[:notice]
       = yield
+      %em NOTE: Looks best on mobile when viewed in landscape mode
 
