--- a/app/views/nfl_teams/index.html.haml
+++ b/app/views/nfl_teams/index.html.haml
@@ -11,5 +11,5 @@
         %tbody
           - @nfl_teams.each do |nfl_team|
             %tr.row
-              %td= link_to(nfl_team.name, nfl_team)
-              %td= nfl_team.players.distinct.map{|p| link_to(p.name, p)}.join(", ").html_safe
+              %td= nfl_team_link(nfl_team)
+              %td= nfl_team.players.distinct.map{|p| player_link(p)}.join(", ").html_safe
