--- a/app/views/players/index.html.haml
+++ b/app/views/players/index.html.haml
@@ -11,5 +11,5 @@
         %tbody
           - @players.each do |player|
             %tr.row
-              %td= link_to(player.name, player)
-              %td
+              %td= player_link(player)
+              %td= player.score
