--- a/app/views/fantasy_teams/index.html.haml
+++ b/app/views/fantasy_teams/index.html.haml
@@ -15,6 +15,8 @@
             %th TE
             %th K
             %th Players Left
+            - (1..4).each do |week_number|
+              %th Week #{week_number}
             %th Score
         %tbody
           - @fantasy_teams.sort_by(&:score).reverse.each do |fantasy_team|
@@ -28,5 +30,7 @@
               %td= player_name_at_pos_and_score(fantasy_team, "TE")
               %td= player_name_at_pos_and_score(fantasy_team, "K")
               %td= fantasy_team.players_left
+              - (1..4).each do |week_number|
+                %td= fantasy_team.score_for_week(week_number)
               %td
                 %strong= fantasy_team.score
