--- a/app/views/games/index.html.haml
+++ b/app/views/games/index.html.haml
@@ -13,7 +13,7 @@
         %tbody
           - @games.each do |game|
             %tr.row
-              %td= link_to(game.game_time.strftime("%m/%d %H:%M"), game)
+              %td= link_to(game.game_time.strftime("%m/%d %I:%M"), game)
               %td= link_to(game.visiting_team.name, game.visiting_team)
               %td= link_to(game.home_team.name, game.home_team)
               %td #{game.visiting_team_score} - #{game.home_team_score}
