--- a/app/views/fantasy_teams/show.html.haml
+++ b/app/views/fantasy_teams/show.html.haml
@@ -6,7 +6,7 @@
       %table.table
         %thead
           %tr.row
-            %th QB
+            %th Position
             %th Name
             %th NFL Team
             %th Games Played
